Actualizacion entrega diseno

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>T5_202010</name>
+	<name>Proyecto2_202010_sec4_team4</name>
 	<comment></comment>
 	<projects>
 	</projects>
